# PaperTrail

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: api.md  architecture.md
docs/features/: cross-encoder.md  export.md  multimodal.md  scheduler.md  streaming.md  web-ui.md
src/papertrail/: __init__.py  cli.py
src/papertrail/agents/: research_agent.py  scientist_agent.py  tools.py
src/papertrail/api/: __init__.py  main.py
src/papertrail/chains/: critique.py  planning.py  streaming.py  synthesis.py
src/papertrail/evaluation/: coverage.py  faithfulness.py
src/papertrail/export/: __init__.py
src/papertrail/ingestion/: arxiv_client.py  metadata.py  pdf_loader.py
src/papertrail/memory/: paper_memory.py  trend_memory.py
src/papertrail/processing/: cleaners.py  embeddings.py  multimodal.py  splitters.py
src/papertrail/retrieval/: reranker.py  retrievers.py  vectorstore.py
src/papertrail/scheduler/: __init__.py  jobs.py
src/papertrail/schemas/: schema.py
src/papertrail/utils/: __init__.py  llm.py
tests/: test_papertrail.py
